--- a/CSS/store.css
+++ b/CSS/store.css
@@ -158,8 +158,8 @@ header .container ul li a:hover {
     align-items: center;
     justify-content: center;
     position: fixed;
-    right: 0;
-    bottom: 0;
+    right: 5px;
+    bottom: 5px;
     z-index: 10;
 }
 
@@ -442,19 +442,134 @@ header .container ul li a:hover {
 
 /* -----------Contact Us------------- */
 
+
+.contact-us {
+    width: 100%;
+    background-color: rgba(173, 173, 173, 0.3);
+}
+
+.contact-us .send {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+@media (max-width: 767px) {
+    .contact-us .send {
+        flex-direction: column;
+    }
+}
+
 .contact-us .contact {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
-    height: 100px;
-    padding-bottom: 50px; 
 }
 
-.contact-us .contact i {
-    font-size: 20px;
+.contact-us .send .contact i {
+    font-size: 30px;
     font-weight: 400;
-    padding: 20px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgb(134, 134, 134);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.contact-us .send .contact .i {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 40px;
+    width: 210px;
+    height: 41px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.contact-us .send .contact .i:hover {
+    span {
+        transform: translateX(-40px);
+    } 
+}
+
+.contact-us .send .contact .i span {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    text-decoration: none;
+    font-size: 18px;
+    z-index: -1;
+    padding: 0 10px 0 0;
+    background-color: rgba(134, 134, 134, 0.5);
+    width: 130px;
+    height: 41px;
+    border: 2px solid rgb(134, 134, 134);
+    border-radius: 20px;
+    transform: translateX(-129px);
+    transition: all 0.5s linear;
+}
+
+.send hr {
+    width: 2px;
+    height: 300px;
+    background-color: rgb(134, 134, 134);
+    box-shadow: 0 0 10px black;
+
+}
+
+@media (max-width: 991px) {
+    .send hr {
+        width: 300px;
+        height: 2px;
+    }
+}
+
+.send .message {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.send .message input {
+    padding: 10px;
+    border: 3px solid rgb(134, 134, 134);
+    border-radius: 20px;
+    color: black;
+    margin: 10px 0 30px 0 ;
+    width: 70%;
+    height: 40px;
+    background-color: rgba(134, 134, 134, 0.7);
+    outline: none;
+    box-shadow: 0 0 10px black;
+}
+
+.send .message textarea {
+    padding: 10px;
+    width: 90%;
+    height: 150px;
+    border-radius: 20px;
+    color: white;
+    background-color: rgba(134, 134, 134, 0.7);
+    outline: none;
+}
+
+.send .message #send {
     cursor: pointer;
 }
 
